# robp_description

./: CMakeLists.txt  README.md  package.xml
meshes/: FrontWheels.stl  GPU_fixture_withcard.stl  NUC_fixture_withnuc.stl  Phidgets.stl  chassis.stl  distanser.stl  engines.stl  rearWheels.stl
urdf/: armpi_fpv.urdf  robot.urdf  robot3.urdf
